<?xml version="1.0" encoding="utf-8"?><!--Using linear layout with vertical orientation and center gravity -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--ImageView used for showing pictures along with questions-->
    <ImageView
        android:id="@+id/questonIMG"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:src="@drawable/f1" />

    <!--TextView used for showing questions on screen-->

    <!--Using another LinearLayout for showing buttons
        in horizontal orientation-->
    <TextView
        android:id="@+id/questionTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_rose_pink"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!--TrueButton-->
        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#5BD91B"
            android:text="@string/true_"
            android:textSize="20sp" />

        <!--FalseButton-->
        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:backgroundTint="#E33328"
            android:text="@string/false_"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="2dp">

        <!--PreviousButton-->
        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#DFD2D1"
            android:src="@drawable/ic_skip_previous"
            android:text="@string/prev_text" />

        <!--NextButton-->
        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#DFD2D1"
            android:src="@drawable/ic_skip_next"
            android:text="@string/next_text" />


    </LinearLayout>

    <TextView
        android:id="@+id/scoreTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/score"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:textStyle="bold" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp" />
</LinearLayout>
